[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WaterAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TestScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Camera2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=5]

[node name="Map" type="Node" index="0"]

script = ExtResource( 1 )
enemy_count = 10

[node name="TileMap" parent="." index="0" instance=ExtResource( 2 )]

[node name="TestScene" parent="." index="1" instance=ExtResource( 3 )]

[node name="Camera2D" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 960, 512 )
_sections_unfolded = [ "Editor", "Limit", "Smoothing" ]

[node name="SpawnRate" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Platform" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 2336, 448 )
z_index = 30
_sections_unfolded = [ "Collision", "Z Index" ]

[connection signal="timeout" from="SpawnRate" to="." method="_on_SpawnRate_timeout"]


